--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 				</form>
 			</div>
 			<div class="map">
-				<img src="/img/map.jpg" alt="Карта с адресом нашей компании">
+				<img src="/img/map.jpg" alt="Карта с адресом офиса нашей компании">
 			</div>
 		</section>
 
